# FacerAnonim

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
anonymization/: __init__.py  entity_anonymizer.py
anonymization/handler/: llm_handler.py
api/: app.py  models.py  routes.py
tests/: test_entity_anonymizer.py  test_integration.py
